@@ -7,8 +7,12 @@
 // or the GNU Public License version 2 or later
 // <http://www.gnu.org/copyleft/gpl.html>
 //
-// $Id: WordDB.cc,v 1.1 1999/10/01 16:45:51 loic Exp $
+// $Id: WordDB.cc,v 1.2 1999/10/05 16:48:03 loic Exp $
 //
+
+#ifdef HAVE_CONFIG_H
+#include "htconfig.h"
+#endif /* HAVE_CONFIG_H */
 
 #include "WordDB.h"
 
