@@ -11,8 +11,12 @@
 // or the GNU Public License version 2 or later 
 // <http://www.gnu.org/copyleft/gpl.html>
 //
-// $Id: WordType.cc,v 1.1 1999/09/30 15:56:46 loic Exp $
+// $Id: WordType.cc,v 1.2 1999/10/05 16:48:03 loic Exp $
 //
+
+#ifdef HAVE_CONFIG_H
+#include "htconfig.h"
+#endif /* HAVE_CONFIG_H */
 
 #include <iostream.h>
 #include <ctype.h>
